# tropennacht_app

./: pyproject.toml
.github/workflows/: ruff.yaml
src/tropennacht_app/: __init__.py  alembic.ini  generate_calendar.py  main.py  tropennacht_db.py  vcr_weather_api.yaml
src/tropennacht_app/alembic/: env.py
src/tropennacht_app/alembic/versions/: 95f9b71fa6cb_.py
src/tropennacht_app/templates/: base.html  cities.html  city.html  login.html  protected.html  public.html  signup.html
