[project]
name = "tropennacht-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "supabase>=2.7.4",
    "ipdb>=0.13.13",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.2.0",
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
